--- a/archives/dockerProjects/nordvpn/Dockerfile
+++ b/archives/dockerProjects/nordvpn/Dockerfile
@@ -15,4 +15,5 @@ RUN set -x \
 RUN rm -f /etc/squid/squid.conf
 COPY squid.conf /etc/squid/squid.conf
 COPY entrypoint.sh /entrypoint.sh
-CMD [ "/bin/bash", "-c", "/entrypoint.sh" ]
+ENTRYPOINT [ "/entrypoint.sh" ]
+# CMD [ "/bin/bash", "-c", "/entrypoint.sh" ]
