--- a/archives/dockerProjects/nordvpn/squid.conf
+++ b/archives/dockerProjects/nordvpn/squid.conf
@@ -23,10 +23,17 @@ acl CONNECT method CONNECT
 
 http_access deny !Safe_ports
 
-acl mynet src XXX.XXX.XXX.XXX
+# LOCAL ETH0
+acl ETH0 src ETH0IP
+# LOCAL WLAN0
+acl WLAN0 src WLAN0IP
+# NORDVPN
+acl NORDVPN src NORDVPNIP
 
 http_access allow localhost
-http_access allow mynet
+http_access allow ETH0
+http_access allow WLAN0
+http_access allow NORDVPN
 
 visible_hostname none
 forwarded_for off
