--- a/archives/dockerProjects/nordvpn/docker-compose.yml
+++ b/archives/dockerProjects/nordvpn/docker-compose.yml
@@ -11,4 +11,4 @@ services:
     network_mode: host
     privileged: true
     environment:
-      - NORDVPN_TOKEN=value
+      - NORDVPN_TOKEN=${TOKEN}
