--- a/archives/dockerProjects/dockerRMsample/Dockerfile
+++ b/archives/dockerProjects/dockerRMsample/Dockerfile
@@ -3,4 +3,4 @@ FROM debian:latest
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
-ENTRYPOINT [ "/entrypoint.sh" ]
+ENTRYPOINT /entrypoint.sh
