--- a/archives/dockerProjects/scraping/Dockerfile
+++ b/archives/dockerProjects/scraping/Dockerfile
@@ -1,23 +1,24 @@
 ARG IMAGE_TAG
 FROM $IMAGE_TAG
 
+SHELL [ "/bin/bash", "-c" ]
+
 # Update
 RUN apt update && apt -y upgrade
 RUN apt-get update && apt-get -u upgrade
-RUN apt-get install -y chromium
 
 # local language
-RUN apt-get update                                  \
-    && apt-get install -y locales                   \
-    && locale-gen ja_JP.UTF-8                       \
-    && echo "export LANG=ja_JP.UTF-8" >> ~/.bashrc  \
+RUN apt-get update \
+    && apt-get install -y locales \
+    && locale-gen ja_JP.UTF-8 \
+    && echo "export LANG=ja_JP.UTF-8" >> ~/.bashrc \
     && echo "export LANGUAGE=ja_JP:ja" >> ~/.bashrc
 
 # Scraping
-RUN python -m pip install requests          \
-                          selenium          \
-                          requests-html     \
-                          beautifulsoup4    \
+RUN python -m pip install requests \
+                          selenium \
+                          requests-html \
+                          beautifulsoup4 \
                           webdriver-manager
 
 # 画像処理用
