--- a/archives/dockerProjects/python/Dockerfile
+++ b/archives/dockerProjects/python/Dockerfile
@@ -10,7 +10,7 @@ RUN apt install -y sudo git
 
 # Python Install
 ARG PYTHON_VERSION
-RUN git clone https://github.com/linux-setup.git
+RUN git clone https://github.com/skrjtech/linux-setup.git
 RUN . linux-setup/installer/python.sh $PYTHON_VERSION
 RUN rm -rf linux-setup
 
