--- a/archives/dockerProjects/python/Dockerfile
+++ b/archives/dockerProjects/python/Dockerfile
@@ -14,4 +14,6 @@ RUN git clone https://github.com/skrjtech/linux-setup.git
 RUN . linux-setup/installer/python.sh $PYTHON_VERSION
 RUN rm -rf linux-setup
 
+ENV PATH /usr/local/python/bin:$PATH
+
 CMD [ "/bin/bash" ]
