--- a/archives/dockerProjects/pycharm/Dockerfile
+++ b/archives/dockerProjects/pycharm/Dockerfile
@@ -6,9 +6,8 @@ RUN apt install -y sudo git
 
 RUN set -x \
     && git clone https://github.com/skrjtech/linux-setup.git \
-    && cd linux-setup \
-    && . installer/pycharm.sh \
-    && cd ../ && rm -rf linux-setup \
+    && . linux-setup/installer/pycharm.sh \
+    && rm -rf linux-setup \
     && set +x
 
 CMD [ "/bin/bash" ]
